--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,4 @@
 ATL= mongodb+srv://neeraj78:neeraj78@cluster0.si3xc.mongodb.net/mern?retryWrites=true&w=majority
 PORT = 5000
+APIKEY = "867da91417f94c0cbd4155724222801"
 
